comment styles, box-sizing fix, added padding < 70rem, removed overflow-x on body

--- a/src/style/components/_details.scss
+++ b/src/style/components/_details.scss
@@ -14,6 +14,13 @@
     }
 }
 
+.cs-details-body {
+    margin: 1rem 0;
+    padding: 1rem 0;
+    border-top: 0.0625rem solid $color-silver-3;
+    border-bottom: 0.0625rem solid $color-silver-3;
+}
+
 .cs-details-head-button {
     font-size: .75rem;
     font-weight: normal;
@@ -33,6 +40,11 @@
     line-height: 1.75rem;
     padding: 0 1rem;
     text-transform: none;
+    transition-property: all;
+
+    &:hover {
+        border-color: transparent;
+    }
 }
 
 .cs-item-details-screenshot {
@@ -44,6 +56,6 @@
     background-color: $color-white;
     border: solid 1px $color-silver;
     border-radius: .5rem;
-    margin-bottom: 1rem;
     padding: 1rem;
+    margin-top: 1rem;
 }
