--- a/src/style/components/_main-wrap.scss
+++ b/src/style/components/_main-wrap.scss
@@ -1,8 +1,13 @@
 .cs-main-wrap {
     margin: auto;
     max-width: $global-max-width;
-    padding: $global-padding 0;
+    padding: $global-padding 1rem;
     width: 100%;
+
+    @media (min-width: 72rem) {
+        padding-right: 0;
+        padding-left: 0;
+    }
 }
 
 
